trustfall_core/test_data/tests/parse_errors/tag_on_fold.parse-error.ron
Err(UnsupportedDirectivePosition("@tag", "this directive can only be used together with @fold if it\'s placed after `@fold @transform(op: \"count\")`", Pos(
  line: 6,
  column: 27,
)))
